testsuite/tests/ghc-regress/typecheck/should_fail/tcfail204.hs

{-# OPTIONS_GHC -Wall #-}
{-# OPTIONS_GHC -Werror #-}

module Foo where

foo :: Int
foo = ceiling 6.3

